feat: update playlist client and cover upload
