# frontend/person-blog-app/packages/blog/swagger.json
@@ -4,11 +4,6 @@
     "title": "Gateway.API",
     "version": "1.0"
   },
-  "servers": [
-    {
-      "url": "/video"
-    }
-  ],
   "paths": {
     "/api/Ban/sendPostBanRequest": {
       "post": {
@@ -1367,7 +1362,24 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/PostCommonModelV2PagedListViewModel"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PostCommonModelV2PagedListViewModel"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PostCommonModelV2PagedListViewModel"
+                }
+              }
+            }
           }
         }
       }
@@ -1698,6 +1710,13 @@
               "type": "string",
               "format": "uuid"
             }
+          },
+          {
+            "name": "contentType",
+            "in": "query",
+            "schema": {
+              "$ref": "#/components/schemas/PlayListContentTypeModel"
+            }
           }
         ],
         "responses": {
@@ -1740,19 +1759,58 @@
         ],
         "requestBody": {
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
-                "$ref": "#/components/schemas/CreatePlayListRequest"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreatePlayListRequest"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreatePlayListRequest"
+                "required": [
+                  "Title"
+                ],
+                "type": "object",
+                "properties": {
+                  "Title": {
+                    "type": "string"
+                  },
+                  "ThumbnailId": {
+                    "type": "string",
+                    "format": "uuid"
+                  },
+                  "Thumbnail": {
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "PostIds": {
+                    "type": "array",
+                    "items": {
+                      "type": "string",
+                      "format": "uuid"
+                    }
+                  },
+                  "ContentType": {
+                    "$ref": "#/components/schemas/PlayListContentTypeModel"
+                  },
+                  "Kind": {
+                    "$ref": "#/components/schemas/PlayListKindModel"
+                  }
+                }
+              },
+              "encoding": {
+                "Title": {
+                  "style": "form"
+                },
+                "ThumbnailId": {
+                  "style": "form"
+                },
+                "Thumbnail": {
+                  "style": "form"
+                },
+                "PostIds": {
+                  "style": "form"
+                },
+                "ContentType": {
+                  "style": "form"
+                },
+                "Kind": {
+                  "style": "form"
+                }
               }
             }
           }
@@ -2207,6 +2265,15 @@
       "post": {
         "tags": [
           "Post"
+        ],
+        "parameters": [
+          {
+            "name": "postType",
+            "in": "query",
+            "schema": {
+              "$ref": "#/components/schemas/PostType"
+            }
+          }
         ],
         "requestBody": {
           "content": {
@@ -4203,37 +4270,6 @@
         },
         "additionalProperties": false
       },
-      "CreatePlayListRequest": {
-        "required": [
-          "title"
-        ],
-        "type": "object",
-        "properties": {
-          "title": {
-            "type": "string",
-            "nullable": true
-          },
-          "thumbnailId": {
-            "type": "string",
-            "format": "uuid",
-            "nullable": true
-          },
-          "thumbnail": {
-            "type": "string",
-            "format": "binary",
-            "nullable": true
-          },
-          "postIds": {
-            "type": "array",
-            "items": {
-              "type": "string",
-              "format": "uuid"
-            },
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
       "CreatePostModelViewModel": {
         "type": "object",
         "properties": {
@@ -4385,6 +4421,14 @@
         },
         "additionalProperties": false
       },
+      "PlayListContentTypeModel": {
+        "enum": [
+          0,
+          1
+        ],
+        "type": "integer",
+        "format": "int32"
+      },
       "PlayListItemAddRequest": {
         "required": [
           "playListId",
@@ -4425,6 +4469,14 @@
         },
         "additionalProperties": false
       },
+      "PlayListKindModel": {
+        "enum": [
+          0,
+          1
+        ],
+        "type": "integer",
+        "format": "int32"
+      },
       "PlayListListItem": {
         "type": "object",
         "properties": {
@@ -4446,6 +4498,12 @@
           },
           "canEdit": {
             "type": "boolean"
+          },
+          "contentType": {
+            "$ref": "#/components/schemas/PlayListContentTypeModel"
+          },
+          "kind": {
+            "$ref": "#/components/schemas/PlayListKindModel"
           }
         },
         "additionalProperties": false
@@ -4483,6 +4541,9 @@
           },
           "creator": {
             "$ref": "#/components/schemas/PostCreatorModel"
+          },
+          "postType": {
+            "$ref": "#/components/schemas/PostTypeModel"
           }
         },
         "additionalProperties": false
